# moondawg-ino

./: .gitignore  Bot_Passthrough_Code.ino  CMakeLists.txt  MoonDawgArduinoTesting.ino  MoonDawgEmbedded.cpp  MoonDawgEmbedded.h  README.md  movementBasic.cpp  movementBasic.h  pinDefinitions.h  platformio.ini  setup.cpp  setup.h
Encoder_feedback_TESTCODE/: Encoder_feedback_TESTCODE.ino
MoonDawgArduino/: MoonDawgArduinoTesting.ino
MoonDawgArduino/Libraries/: README.txt
MoonDawgArduino/Libraries/CameraControl/: Camera.cpp  Camera.h
MoonDawgArduino/Libraries/Movement/: Movement.cpp  Movement.h  Movement.properties
MoonDawgArduino/Libraries/MovementMoonDawg/: Movement.cpp  Movement.h  SetupMoonDawg.properties
MoonDawgArduino/Libraries/PinDefinitions/: PinDefinitions.h  PinDefinitions.properties
MoonDawgArduino/Libraries/PinDefinitionsMoonDawg/: PinDefinitions.h  SetupMoonDawg.properties
MoonDawgArduino/MoonDawgArduino/: MoonDawgArduino.ino
MoonDawgArduino/MoonDawgArduinoTesting/: MoonDawgArduino.ino  MoonDawgArduinoTesting.ino
MoonDawgArduinoTesting/: MoonDawgArduinoTesting.ino
lib/PinDefinitions/: keywords.txt
src/: Camera.cpp  Camera.h  Encoders.cpp  Encoders.h  Movement.cpp  Movement.h  Sandstorm.ino
src/Movement/: Movement.h  keywords.txt
src/Sandstorm/: Camera.cpp  Camera.h  Camera.ino  Camera.properties  Communication.cpp  Communication.h  Encoders.cpp  Encoders.h  Motors.cpp  Motors.h  Movement.cpp  Movement.h  Movement.ino  PinDefinitions.h  PinDefinitions.ino  PinDefinitions.properties  Sandstorm.cpp  Sandstorm.ino
(+5 files in other folders)
